# ifi

./: .gitignore  LICENSE  LICENSE.md  README.md  benchmark.bat  interactive_analysis.py  pyproject.toml  pytest.ini  quick_test.bat  requirements.txt  run.py  run_tests.bat  test_real_data.bat
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/scripts/: benchmark.bat
docs/source/: conf.py  data_schema.rst  getting_started.rst  index.rst  tutorial.rst
dummy/: extracting_ridges.py  test_cdm_debug.py  test_cdm_density_analysis.py  test_cdm_fixed.py  test_cdm_simple.py  test_cdm_standalone.py  test_plot_comprehensive.py  test_plot_debug.py  test_real_data_cdm.py  test_simple_phase.py
ifi/: README.md  __init__.py  config.ini.template  file_io.py  main.py  requirements.txt  utils.py
ifi/analysis/: __init__.py  config_if.ini  if_config.ini  ifi_analyzer.py  interactive_analysis.py  main_analysis.py  phase_analysis.py  phi2ne.py  plots.py  processing.py  spectrum.py  workflow.py  workflow_density.py
ifi/db_controller/: __init__.py  nas_db.py  nas_db_base.py  nas_db_mixin_cache.py  nas_db_mixin_parse_csv.py  nas_db_mixin_parse_data.py  nas_db_mixin_query_files.py  nas_db_mixin_query_shots.py  nas_db_mixin_read_dispatch.py  nas_db_mixin_read_top.py  nas_db_mixin_setup.py  nas_db_utils.py  shotdata_field_250725.csv  shotdata_field_260101.csv  vest_db.py  vest_db_base.py  vest_db_mixin_query.py  vest_db_mixin_setup.py
ifi/gui/: __init__.py  main_window.py  suffix.ini  suffix_config.py
ifi/plot/: __init__.py  plot.py  plot_common_module.py  plot_density_module.py  plot_overview_module.py  plot_runtime.py  (+3 more)
scripts/: append_vestdata_to_h5.py  plot_saved_results.example.ini  plot_saved_results.example_old.ini  plot_saved_results.format280g.ini  plot_saved_results.format280g1.ini  plot_saved_results.py  run_analysis.bat  run_analysis.ps1  run_analysis_example.py  run_analysis_loop.bat  run_analysis_loop.ps1  run_analysis_smart.bat  run_analysis_smart.ps1  run_analysis_smart.py  run_datasave.bat  run_datasave.ps1  run_vest_monitoring.ps1  run_vest_monitoring.py  summarize_envelope_segments.py
tests/: README.md  TEST_SUMMARY.md  conftest.py  temp_proposed_cordic_test.py  test_temp.ipynb
(+197 files in other folders)
